made mobile landingpage

--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Portfolio Dieter Schepers</title>
 </head>
+
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <img src="img/logo.svg" alt="logo">
+            <img src="img/hamburger.svg" alt="hamburger icon">
+        </header>
+
+        <main>
+            <div class='landingpage'>
+                <div class='landingpage__text-wrap'>
+                    <h1 class='landingpage__fullname'>Dieter Schepers</h1>
+                    <h2 class='landingpage__jobtitle'><span class="red-color">full stack</span> developer</h2>
+                    <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. I make full responsive static and dynamic websites.</p>
+                </div>
+                <div class='landingpage__button-wrap'>
+                    <a class='landingpage__button--projects' href="#">Projects</a>
+                    <a class='landingpage__button--resume' href="#">Resume</a>
+                </div>
+
+                <img src="img/portfolio.svg" alt="frontpage image">
+            </div>
+        </main>
+
+
+
+
+
+
+
+    </div>
 </body>
+
 </html>
