--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
 <body>
     <div class="wrapper">
         <header>
-            <img src="img/logo.svg" alt="logo">
-            <img src="img/hamburger.svg" alt="hamburger icon">
+            <a href='/'><img class='header-image__logo' src="img/logo.svg" alt="logo"></a>
+            <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
+            <nav class='header__navigation'>
+                <ul>
+                    <li><a href="/">home</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-navigation">
+                <div class='mobile-navigation__img-wrap'>
+                    <a href='/'><img class='header-image__logo' src="img/logo.svg" alt="logo"></a>
+                    <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
+                </div>
+                <ul>
+                    <li><a href="/">home</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
         </header>
 
         <main>
@@ -22,7 +42,8 @@
                 <div class='landingpage__text-wrap'>
                     <h1 class='landingpage__fullname'>Dieter Schepers</h1>
                     <h2 class='landingpage__jobtitle'><span class="red-color">full stack</span> developer</h2>
-                    <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. I make full responsive static and dynamic websites.</p>
+                    <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. I make
+                        full responsive static and dynamic websites.</p>
                 </div>
                 <div class='landingpage__button-wrap'>
                     <a class='landingpage__button--projects' href="#">Projects</a>
@@ -31,15 +52,13 @@
 
                 <img src="img/portfolio.svg" alt="frontpage image">
             </div>
+
+            <hr>
+
+
         </main>
-
-
-
-
-
-
-
     </div>
+    <script src='js/main.js'></script>
 </body>
 
 </html>
