--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <a href='/'><img class='header-image__logo' src="img/logo.svg" alt="logo"></a>
+            <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
             <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
             <nav class='header__navigation'>
                 <ul>
@@ -25,7 +25,7 @@
             </nav>
             <div class="mobile-navigation">
                 <div class='mobile-navigation__img-wrap'>
-                    <a href='/'><img class='header-image__logo' src="img/logo.svg" alt="logo"></a>
+                    <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
                     <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
                 </div>
                 <ul>
@@ -55,6 +55,43 @@
 
             <hr>
 
+            <section class="about">
+                <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
+                <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span>, thank you for visiting my website!</p>
+                <p class="about__intro-text--info">I'm a student at Arteveldehogeschool in Ghent. Currently in my first year of Web development. Besides <span class="yellow-color">making websites</span>, I like to play <span class="yellow-color">games</span>, listen to <span class="yellow-color">music</span> and <span class="yellow-color">socialize</span>.</p>
+                <div class="about__links">
+                    <p class="about__my-links">My links:</p>
+                    <div class="about__links-wrap">
+                        <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img src="img/linkedin.svg"
+                                alt="linkedIn logo"></a>
+                        <a href="https://github.com/pgm-dieterschepers" target="_blank"><img src="img/github.svg" alt="Github logo"></a>
+                        <a href="https://stackoverflow.com/users/15207971/pgm-dieterschepers" target="_blank"><img
+                                src="img/stackoverflow.svg" alt="Stackoverflow logo"></a>
+                    </div>
+                </div>
+                <ul class="about__personal-info">
+                    <li><span class="yellow-color"><strong>Birthday:</strong></span>06/06/1996</li>
+                    <li><span class="yellow-color"><strong>Age:</strong></span>25</li>
+                    <li><span class="yellow-color"><strong>Degree:</strong></span>graduate programming</li>
+                    <li><span class="yellow-color"><strong>Email:</strong></span><a
+                            href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
+                    <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 33 81</a></li>
+                    <li><span class="yellow-color"><strong>City:</strong></span>Steenokkerzeel, Vlaams-Brabant</li>
+                </ul>
+                <img src="img/profile.svg" alt="profile svg">
+            </section>
+
+            <div class="quote">
+                <img src="img/quote.svg" alt="quote svg">
+                <p>Backend developers never get credit for their work from customers. I mean... when did a customer ever say: "I am so proud you can save the data in the database!"? Exactly... NEVER!</p>
+                <img class="quote-svg-reverse" src="img/quote.svg" alt="quote svg">
+            </div>
+
+            <section class="skills">
+                <h2 class="skills__title">My awesome <span class="red-color-and-border">skills</span></h2>
+
+                <div class="skills-grid"></div>
+            </section>
 
         </main>
     </div>
