added mobile collaborate section and removed project folder

--- a/index.html
+++ b/index.html
@@ -57,14 +57,19 @@
 
             <section class="about">
                 <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
-                <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span>, thank you for visiting my website!</p>
-                <p class="about__intro-text--info">I'm a student at Arteveldehogeschool in Ghent. Currently in my first year of Web development. Besides <span class="yellow-color">making websites</span>, I like to play <span class="yellow-color">games</span>, listen to <span class="yellow-color">music</span> and <span class="yellow-color">socialize</span>.</p>
+                <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span>, thank you for
+                    visiting my website!</p>
+                <p class="about__intro-text--info">I'm a student at Arteveldehogeschool in Ghent. Currently in my first
+                    year of Web development. Besides <span class="yellow-color">making websites</span>, I like to play
+                    <span class="yellow-color">games</span>, listen to <span class="yellow-color">music</span> and <span
+                        class="yellow-color">socialize</span>.</p>
                 <div class="about__links">
                     <p class="about__my-links">My links:</p>
                     <div class="about__links-wrap">
-                        <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img src="img/linkedin.svg"
-                                alt="linkedIn logo"></a>
-                        <a href="https://github.com/pgm-dieterschepers" target="_blank"><img src="img/github.svg" alt="Github logo"></a>
+                        <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img
+                                src="img/linkedin.svg" alt="linkedIn logo"></a>
+                        <a href="https://github.com/pgm-dieterschepers" target="_blank"><img src="img/github.svg"
+                                alt="Github logo"></a>
                         <a href="https://stackoverflow.com/users/15207971/pgm-dieterschepers" target="_blank"><img
                                 src="img/stackoverflow.svg" alt="Stackoverflow logo"></a>
                     </div>
@@ -75,7 +80,8 @@
                     <li><span class="yellow-color"><strong>Degree:</strong></span>graduate programming</li>
                     <li><span class="yellow-color"><strong>Email:</strong></span><a
                             href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
-                    <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 33 81</a></li>
+                    <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 33
+                            81</a></li>
                     <li><span class="yellow-color"><strong>City:</strong></span>Steenokkerzeel, Vlaams-Brabant</li>
                 </ul>
                 <img src="img/profile.svg" alt="profile svg">
@@ -83,7 +89,8 @@
 
             <div class="quote">
                 <img src="img/quote.svg" alt="quote svg">
-                <p>Backend developers never get credit for their work from customers. I mean... when did a customer ever say: "I am so proud you can save the data in the database!"? Exactly... NEVER!</p>
+                <p>Backend developers never get credit for their work from customers. I mean... when did a customer ever
+                    say: "I am so proud you can save the data in the database!"? Exactly... NEVER!</p>
                 <img class="quote-svg-reverse" src="img/quote.svg" alt="quote svg">
             </div>
 
@@ -92,6 +99,55 @@
 
                 <div class="skills-grid"></div>
             </section>
+
+            <section class="projects">
+                <h2>My cool <span class="red-color-and-border">projects</span></h2>
+                <ul class="projects__list"></ul>
+                <a class='projects__view-all' href="projects.html">view all projects</a>
+            </section>
+
+            <section class="collaborate">
+                <h2>Let's <span class="red-color-and-border">collaborate</span></h2>
+                <ul class="collaborate__contact-info">
+                    <li><span class='collaborate__block'>Email:</span><a
+                            href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
+                    <li><span class='collaborate__block'>Telephone:</span><a href="tel:+470823381">0470 82 33 81</a>
+                    </li>
+                    <li><span class="collaborate__block margin-bottom">My links:</span>
+                        <div class="about__links-wrap">
+                            <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img
+                                    src="img/linkedin.svg" alt="linkedIn logo"></a>
+                            <a href="https://github.com/pgm-dieterschepers" target="_blank"><img src="img/github.svg"
+                                    alt="Github logo"></a>
+                            <a href="https://stackoverflow.com/users/15207971/pgm-dieterschepers" target="_blank"><img
+                                    src="img/stackoverflow.svg" alt="Stackoverflow logo"></a>
+                        </div>
+                    </li>
+                </ul>
+
+                <form action="" class="collaborate__form">
+                    <label for="fullname">
+                        <input class="form-styling" type="text" id="fullname" name="fullname" placeholder="Full name:">
+                        <span class='form-label'>Full name:</span>
+                    </label>
+                    <label for="subject">
+                        <input class="form-styling" type="text" id="subject" name="subject" placeholder="Subject:">
+                        <span class='form-label'>Subject:</span>
+                    </label>
+                    <label for="message">
+                        <textarea class="form-styling textarea" type="text" id="message" name="message"
+                            placeholder="Message:"></textarea>
+                        <span class='form-label'>Message:</span>
+                    </label>
+                    <input class="collaborate__form--submit-btn" type="submit" value="Send">
+                </form>
+
+            </section>
+
+
+
+
+
 
         </main>
     </div>
