made mobile footer

--- a/index.html
+++ b/index.html
@@ -141,15 +141,33 @@
                     </label>
                     <input class="collaborate__form--submit-btn" type="submit" value="Send">
                 </form>
-
             </section>
-
-
-
-
-
-
         </main>
+        <hr class="footer-hr--above">
+        <footer>
+            <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
+            <p>Dieter Schepers</p>
+            <p><span class='red-color'>fullstack</span>developer</p>
+            <div class="footer__links-wrap">
+                <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img
+                        src="img/linkedin.svg" alt="linkedIn logo"></a>
+                <a href="https://github.com/pgm-dieterschepers" target="_blank"><img src="img/github.svg"
+                        alt="Github logo"></a>
+                <a href="https://stackoverflow.com/users/15207971/pgm-dieterschepers" target="_blank"><img
+                        src="img/stackoverflow.svg" alt="Stackoverflow logo"></a>
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">projects</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav>
+        </footer>
+        <hr class="footer-hr--beneath">
+        <div class="copyright">
+            <p class="copyright-text">&copy; 2021 &minus; Dieter Schepers</p>
+        </div>
     </div>
     <script src='js/main.js'></script>
 </body>
