made nav hover style

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                         <li><span class="yellow-color"><strong>Degree:</strong></span>graduate programming</li>
                         <li><span class="yellow-color"><strong>Email:</strong></span><a
                                 href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
-                        <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 33
-                                81</a></li>
+                        <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 ** **</a></li>
                         <li><span class="yellow-color"><strong>City:</strong></span>Steenokkerzeel, Vlaams-Brabant</li>
                     </ul>
                 </div>
@@ -107,7 +106,7 @@
                 <h2>My cool <span class="red-color-and-border">projects</span></h2>
                 <ul class="projects__list"></ul>
                 <div class="test" id="test"></div>
-                <a class='projects__view-all' href="projects.html">view all projects</a>
+                <a class='projects__view-all' href="#">view all projects</a>
             </section>
 
             <section class="collaborate">
@@ -115,7 +114,7 @@
                 <ul class="collaborate__contact-info">
                     <li><span class='collaborate__block'>Email:</span><a
                             href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
-                    <li><span class='collaborate__block'>Telephone:</span><a href="tel:+470823381">0470 82 33 81</a>
+                    <li><span class='collaborate__block'>Telephone:</span><a href="tel:+470823381">0470 82 ** **</a>
                     </li>
                     <li><span class="collaborate__block margin-bottom">My links:</span>
                         <div class="about__links-wrap">
