made project links fully work

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <!-- 
+        TODO:
+            -   project pagina maken en toevoegen en linken met buttons
+     -->
     <div class="wrapper">
         <header>
             <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
@@ -48,7 +53,7 @@
                     </div>
                     <div class='landingpage__button-wrap'>
                         <a class='landingpage__button--projects' href="#">Projects</a>
-                        <a class='landingpage__button--resume' href="#">Resume</a>
+                        <a class='landingpage__button--resume' href="resume/resume Dieter Schepers.pdf"  target="_blank">Resume</a>
                     </div>
                </div>
 
@@ -105,7 +110,7 @@
             <section class="projects">
                 <h2>My cool <span class="red-color-and-border">projects</span></h2>
                 <ul class="projects__list"></ul>
-                <div class="test" id="test"></div>
+                <div class="projects__project-info" id="projects__project-info"></div>
                 <a class='projects__view-all' href="#">view all projects</a>
             </section>
 
