made full project page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <nav class='header__navigation'>
                 <ul>
                     <li><a href="/">home</a></li>
-                    <li><a href="#projects">projects</a></li>
                     <li><a href="#about">about</a></li>
+                    <li><a href="#projects">projects</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
@@ -62,7 +62,7 @@
 
             <hr>
 
-            <section class="about">
+            <section class="about" id="about">
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
@@ -107,14 +107,14 @@
                 <div class="skills-grid"></div>
             </section>
 
-            <section class="projects">
+            <section class="projects" id="projects">
                 <h2>My cool <span class="red-color-and-border">projects</span></h2>
                 <ul class="projects__list"></ul>
                 <div class="projects__project-info" id="projects__project-info"></div>
-                <a class='projects__view-all' href="#">view all projects</a>
+                <a class='projects__view-all' href="projects/index.html">view all projects</a>
             </section>
 
-            <section class="collaborate">
+            <section class="collaborate" id="contact">
                 <h2>Let's <span class="red-color-and-border">collaborate</span></h2>
                 <ul class="collaborate__contact-info">
                     <li><span class='collaborate__block'>Email:</span><a
