linked some links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 </head>
 
 <body>
-
-    <!-- 
-        TODO:
-            -   project pagina maken en toevoegen en linken met buttons
-     -->
     <div class="wrapper">
         <header>
             <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
@@ -52,7 +47,7 @@
                             full responsive static and dynamic websites.</p>
                     </div>
                     <div class='landingpage__button-wrap'>
-                        <a class='landingpage__button--projects' href="#">Projects</a>
+                        <a class='landingpage__button--projects' href="projects/index.html">Projects</a>
                         <a class='landingpage__button--resume' href="resume/resume Dieter Schepers.pdf"  target="_blank">Resume</a>
                     </div>
                </div>
