--- a/projects/index.html
+++ b/projects/index.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-        <script src='../js/loopSkills.js'></script>
+        <script src='../js/loopProjects.js'></script>
         <script src='../js/main.js'></script>
 </body>
 
