--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="projects/index.html">projects</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </footer>
