--- a/projects/index.html
+++ b/projects/index.html
@@ -56,9 +56,9 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="index.html">projects</a></li>
+                    <li><a href="../index.html#about">about</a></li>
+                    <li><a href="../index.html#contact">contact</a></li>
                 </ul>
             </nav>
         </footer>
