changed 'to home' navigation

--- a/projects/index.html
+++ b/projects/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="wrapper">
         <header>
-            <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
+            <a class='header-image__logo' href='../index.html'><span class='yellow-color'>D</span>S</a>
             <img class='header-image__hamburger' src="../img/hamburger.svg" alt="hamburger icon">
             <nav class='header__navigation'>
                 <ul>
-                    <li><a href="/">home</a></li>
+                    <li><a href="../index.html">home</a></li>
                     <li><a href="../index.html#projects">projects</a></li>
                     <li><a href="../index.html#about">about</a></li>
                     <li><a href="../index.html#contact">contact</a></li>
@@ -29,7 +29,7 @@
                     <img class='header-image__hamburger' src="../img/hamburger.svg" alt="hamburger icon">
                 </div>
                 <ul>
-                    <li><a href="/">home</a></li>
+                    <li><a href="../index.html">home</a></li>
                     <li><a href="../index.html#projects">projects</a></li>
                     <li><a href="../index.html#about">about</a></li>
                     <li><a href="../index.html#contact">contact</a></li>
