--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             </div>
 
             <section class="skills">
-                <h2 class="skills__title">My awesome <span class="red-color-and-border">skills</span></h2>
+                <h2 class="skills__title">My <span class="red-color-and-border">skills</span></h2>
 
                 <div class="skills-grid"></div>
             </section>
 
             <section class="projects" id="projects">
-                <h2>My cool <span class="red-color-and-border">projects</span></h2>
+                <h2>My <span class="red-color-and-border">projects</span></h2>
                 <ul class="projects__list"></ul>
                 <div class="projects__project-info" id="projects__project-info"></div>
                 <a class='projects__view-all' href="projects/index.html">view all projects</a>
