changed about me text, changed about me info li's and added to top button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 </head>
 
 <body>
+    <!--
+    -   <hr> onder elke section
+    -   intro zin (2e zin) op nieuwe lijn laten beginnen
+    -   about me text aanpassen
+    -   resume aanpassen
+    -   tel. nr. aanpassen naar +32
+ -->
     <div class="wrapper">
+
+            <div class="arrow">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
         <header>
             <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
             <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
@@ -39,18 +53,19 @@
 
         <main>
             <div class='landingpage'>
-               <div class="landingpage__text-button-wrap">
+                <div class="landingpage__text-button-wrap">
                     <div class='landingpage__text-wrap'>
                         <h1 class='landingpage__fullname'>Dieter Schepers</h1>
                         <h2 class='landingpage__jobtitle'><span class="red-color">full stack</span> developer</h2>
-                        <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. I make
-                            full responsive static and dynamic websites.</p>
+                        <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. </p>
+                        <p class="landingpage__intro-text">I make full responsive static and dynamic websites.</p>
                     </div>
                     <div class='landingpage__button-wrap'>
                         <a class='landingpage__button--projects' href="projects/index.html">Projects</a>
-                        <a class='landingpage__button--resume' href="resume/resume Dieter Schepers.pdf"  target="_blank">Resume</a>
+                        <a class='landingpage__button--resume' href="resume/resume Dieter Schepers.pdf"
+                            target="_blank">Resume</a>
                     </div>
-               </div>
+                </div>
 
                 <img src="img/portfolio.svg" alt="frontpage image">
             </div>
@@ -61,10 +76,13 @@
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
+                    <!--
                     <p class="about__intro-text--info">I'm a student at Arteveldehogeschool in Ghent. Currently in my first
                         year of Web development. Besides <span class="yellow-color">making websites</span>, I like to play
                         <span class="yellow-color">games</span>, listen to <span class="yellow-color">music</span> and <span
-                            class="yellow-color">socialize</span>.</p>
+                            class="yellow-color">socialize</span>.</p> -->
+                    <p class="about__intro-text--info">A full stack developer who lives in Belgium. Having a passion in
+                        coding, design and backend development.</p>
                     <div class="about__links">
                         <p class="about__my-links">My links:</p>
                         <div class="about__links-wrap">
@@ -77,13 +95,30 @@
                         </div>
                     </div>
                     <ul class="about__personal-info">
-                        <li><span class="yellow-color"><strong>Birthday:</strong></span>06/06/1996</li>
-                        <li><span class="yellow-color"><strong>Age:</strong></span>25</li>
-                        <li><span class="yellow-color"><strong>Degree:</strong></span>graduate programming</li>
-                        <li><span class="yellow-color"><strong>Email:</strong></span><a
-                                href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
-                        <li><span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381">0470 82 ** **</a></li>
-                        <li><span class="yellow-color"><strong>City:</strong></span>Steenokkerzeel, Vlaams-Brabant</li>
+                        <li>
+                            <span class="yellow-color"><strong>Birthday:</strong></span>
+                            <span class='about__info'>06/06/1996</span>
+                        </li>
+                        <li>
+                            <span class="yellow-color"><strong>Age:</strong></span>
+                            <span class='about__info'>25</span>
+                        </li>
+                        <li>
+                            <span class="yellow-color"><strong>Degree:</strong></span>
+                            <span class='about__info'>graduate programming</span>
+                        </li>
+                        <li>
+                            <span class="yellow-color"><strong>Email:</strong></span>
+                            <a href="mailto:dieterschepers96@gmail.com"><span class='about__info'>dieterschepers96@gmail.com</span></a>
+                        </li>
+                        <li>
+                            <span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381"><span class='about__info'>0470 82 **
+                                **</span></a>
+                        </li>
+                        <li>
+                            <span class="yellow-color"><strong>City:</strong></span>
+                            <span class='about__info'>Steenokkerzeel, Vlaams-Brabant</span>
+                        </li>
                     </ul>
                 </div>
                 <img src="img/profile.svg" alt="profile svg">
@@ -147,7 +182,7 @@
             </section>
         </main>
 
-        
+
         <hr class="footer-hr--above">
         <footer>
             <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
