changed about me text

--- a/index.html
+++ b/index.html
@@ -76,13 +76,7 @@
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
-                    <!--
-                    <p class="about__intro-text--info">I'm a student at Arteveldehogeschool in Ghent. Currently in my first
-                        year of Web development. Besides <span class="yellow-color">making websites</span>, I like to play
-                        <span class="yellow-color">games</span>, listen to <span class="yellow-color">music</span> and <span
-                            class="yellow-color">socialize</span>.</p> -->
-                    <p class="about__intro-text--info">A full stack developer who lives in Belgium. Having a passion in
-                        coding, design and backend development.</p>
+                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring fullstack developer. Attentive to detail in all proffesional matters.</p>
                     <div class="about__links">
                         <p class="about__my-links">My links:</p>
                         <div class="about__links-wrap">
