changed project index title

--- a/projects/index.html
+++ b/projects/index.html
@@ -39,7 +39,7 @@
 
         
         <main class="projects-body">
-            <h2 class="projects-body__title">All my cool <span class="red-color">projects</span></h2>
+            <h2 class="projects-body__title">All my <span class="red-color">projects</span></h2>
             <div class="projects-body__projects"></div>
         </main>
 
