removed collaborate section

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 </head>
 
 <body>
-    <!--
-    -   <hr> onder elke section
-    -   intro zin (2e zin) op nieuwe lijn laten beginnen
-    -   about me text aanpassen
-    -   resume aanpassen
-    -   tel. nr. aanpassen naar +32
- -->
     <div class="wrapper">
 
             <div class="arrow">
@@ -138,7 +131,7 @@
                 <a class='projects__view-all' href="projects/index.html">view all projects</a>
             </section>
 
-            <section class="collaborate" id="contact">
+            <!-- <section class="collaborate" id="contact">
                 <h2>Let's <span class="red-color-and-border">collaborate</span></h2>
                 <ul class="collaborate__contact-info">
                     <li><span class='collaborate__block'>Email:</span><a
@@ -173,7 +166,7 @@
                     </label>
                     <input class="collaborate__form--submit-btn" type="submit" value="Send">
                 </form>
-            </section>
+            </section> -->
         </main>
 
 
