--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="wrapper">
 
-            <div class="arrow">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+        <div class="arrow">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
         <header>
             <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
@@ -50,8 +50,7 @@
                     <div class='landingpage__text-wrap'>
                         <h1 class='landingpage__fullname'>Dieter Schepers</h1>
                         <h2 class='landingpage__jobtitle'><span class="red-color">full stack</span> developer</h2>
-                        <p class='landingpage__intro-text'>Passionate full stack developer that is eager to learn. </p>
-                        <p class="landingpage__intro-text">I make full responsive static and dynamic websites.</p>
+                        <p class='landingpage__intro-text'>Enthusiastic developer who strives to make the internet a better place. Passionate in coding and design.</p>
                     </div>
                     <div class='landingpage__button-wrap'>
                         <a class='landingpage__button--projects' href="projects/index.html">Projects</a>
@@ -69,7 +68,8 @@
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
-                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring fullstack developer. Attentive to detail in all proffesional matters.</p>
+                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring fullstack
+                        developer. Attentive to detail in all proffesional matters.</p>
                     <div class="about__links">
                         <p class="about__my-links">My links:</p>
                         <div class="about__links-wrap">
@@ -96,11 +96,13 @@
                         </li>
                         <li>
                             <span class="yellow-color"><strong>Email:</strong></span>
-                            <a href="mailto:dieterschepers96@gmail.com"><span class='about__info'>dieterschepers96@gmail.com</span></a>
+                            <a href="mailto:dieterschepers96@gmail.com"><span
+                                    class='about__info'>dieterschepers96@gmail.com</span></a>
                         </li>
                         <li>
-                            <span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381"><span class='about__info'>0470 82 **
-                                **</span></a>
+                            <span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381"><span
+                                    class='about__info'>0470 82 **
+                                    **</span></a>
                         </li>
                         <li>
                             <span class="yellow-color"><strong>City:</strong></span>
