changed phone number display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="#about">about</a></li>
                     <li><a href="#projects">projects</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <!-- <li><a href="#contact">contact</a></li> -->
                 </ul>
             </nav>
             <div class="mobile-navigation">
@@ -39,7 +39,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#about">about</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <!-- <li><a href="#contact">contact</a></li> -->
                 </ul>
             </div>
         </header>
@@ -101,8 +101,7 @@
                         </li>
                         <li>
                             <span class="yellow-color"><strong>Phone:</strong></span><a href="tel:+470823381"><span
-                                    class='about__info'>0470 82 **
-                                    **</span></a>
+                                    class='about__info'>0470 82 33 81</span></a>
                         </li>
                         <li>
                             <span class="yellow-color"><strong>City:</strong></span>
@@ -189,7 +188,7 @@
                 <ul>
                     <li><a href="projects/index.html">projects</a></li>
                     <li><a href="#about">about</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <!-- <li><a href="#contact">contact</a></li> -->
                 </ul>
             </nav>
         </footer>
