changed about me text

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
-                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring fullstack
-                        developer. Attentive to detail in all proffesional matters.</p>
+                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring 
+                        developer.</p>
                     <div class="about__links">
                         <p class="about__my-links">My links:</p>
                         <div class="about__links-wrap">
