changed title and footer title

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="landingpage__text-button-wrap">
                     <div class='landingpage__text-wrap'>
                         <h1 class='landingpage__fullname'>Dieter Schepers</h1>
-                        <h2 class='landingpage__jobtitle'><span class="red-color">full stack</span> developer</h2>
+                        <h2 class='landingpage__jobtitle'>Student <span class="red-color">full stack</span> developer</h2>
                         <p class='landingpage__intro-text'>Enthusiastic developer who strives to make the internet a better place. Passionate in coding and design.</p>
                     </div>
                     <div class='landingpage__button-wrap'>
@@ -175,7 +175,7 @@
         <footer>
             <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
             <p>Dieter Schepers</p>
-            <p><span class='red-color'>fullstack</span> developer</p>
+            <p>Student <span class='red-color'>full stack</span> developer</p>
             <div class="footer__links-wrap">
                 <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img
                         src="img/linkedin.svg" alt="linkedIn logo"></a>
