removed old resumes and added a new styled resume

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class='landingpage__button-wrap'>
                         <a class='landingpage__button--projects' href="projects/index.html">Projects</a>
-                        <a class='landingpage__button--resume' href="resume/resume Dieter Schepers.pdf"
+                        <a class='landingpage__button--resume' href="resume/resume_Dieter_Schepers.pdf"
                             target="_blank">Resume</a>
                     </div>
                 </div>
